--- a/_posts/2019-07-17-foobar.md
+++ b/_posts/2019-07-17-foobar.md
@@ -5,6 +5,11 @@ title: bar foo
 
 ![image1](/assets/favicon.png)
 
+<audio controls>
+  <source src="/assets/audio/touhou.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+
 <!--more-->
 
 # はははははは
