update audio custom control

--- a/_posts/2019-07-17-foobar.md
+++ b/_posts/2019-07-17-foobar.md
@@ -5,10 +5,29 @@ title: bar foo
 
 ![image1](/assets/favicon.png)
 
-<audio controls>
+<audio id="touhou" preload='none'>
   <source src="/assets/audio/touhou.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
 </audio>
+<a href="#" id="audioControl">Play!</a>
+
+<script>
+    var yourAudio = document.getElementById('touhou'),
+    ctrl = document.getElementById('audioControl');
+
+    ctrl.onclick = function () {
+
+    // Update the Button
+    var pause = ctrl.innerHTML === 'pause!';
+    ctrl.innerHTML = pause ? 'play!' : 'pause!';
+
+    // Update the Audio
+    var method = pause ? 'pause' : 'play';
+    yourAudio[method]();
+
+    // Prevent Default Action
+    return false;
+    };
+</script>
 
 <!--more-->
 
