update audio control

--- a/_posts/2019-07-17-foobar.md
+++ b/_posts/2019-07-17-foobar.md
@@ -8,25 +8,40 @@ title: bar foo
 <audio id="touhou" preload='none'>
   <source src="/assets/audio/touhou.mp3" type="audio/mpeg">
 </audio>
-<a href="#" id="audioControl">Play!</a>
+<a href="#" id="audioPlay"><img src="https://img.icons8.com/material/30/000000/play.png"></a> 
+<a href="#" id="audioStop"><img src="https://img.icons8.com/material/30/000000/stop.png"></a>
 
 <script>
     var yourAudio = document.getElementById('touhou'),
-    ctrl = document.getElementById('audioControl');
+    ctrl = document.getElementById('audioPlay');
+    var playIcon = "<img src=\"https://img.icons8.com/material/30/000000/play.png\">",
+        pauseIcon = "<img src=\"https://img.icons8.com/material/30/000000/pause.png\">";
+
+    var pause = true;
 
     ctrl.onclick = function () {
-
     // Update the Button
-    var pause = ctrl.innerHTML === 'pause!';
-    ctrl.innerHTML = pause ? 'play!' : 'pause!';
+    ctrl.innerHTML = pause ? pauseIcon : playIcon;
 
     // Update the Audio
-    var method = pause ? 'pause' : 'play';
-    yourAudio[method]();
+    if (pause) {
+      yourAudio.play();
+    } else {
+      yourAudio.pause();
+    }
 
     // Prevent Default Action
+    pause = !pause;
     return false;
     };
+
+    var stop = document.getElementById('audioStop');
+    stop.onclick = function () {
+      yourAudio.pause();
+      yourAudio.currentTime = 0;
+      ctrl.innerHTML = playIcon;
+      return false;
+    }
 </script>
 
 <!--more-->
